# glslx

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  README_CN.md  args.hpp  compile_compute_shader.cc  completion.cc  completion.hpp  doc.cc  doc.hpp  document_symbol.cc  document_symbol.hpp  lsp_defs.hpp  parser.hpp  protocol.cc  protocol.hpp  workspace.cc  workspace.hpp
.github/workflows/: build.yml  cmake-multi-platform.yml
examples/: matmul_broadcast1_fp16a_v2.comp
src/: CMakeLists.txt  args.cc  args.hpp  cache.hpp  compile_compute_shader.cc  completion.cc  completion.hpp  compute_inactive.cc  compute_inactive.hpp  doc.cc  doc.hpp  document_symbol.hpp  extractors.hpp  glslx.cc  limits_file.inc  lsp_defs.hpp  parser.cc  parser.hpp  protocol.cc  protocol.hpp  semantic_token.cc  semantic_token.hpp  test_options.cc  test_protocol.cc  workspace.cc  workspace.hpp
